Indented entries in lists.

--- a/OutputFormatting.HtmlFile/styles.css
+++ b/OutputFormatting.HtmlFile/styles.css
@@ -30,6 +30,9 @@ body {
 .key {
     font-size: 1.1em;
 }
+.item {
+    margin-left: 1ex;
+}
 .link-to-top {
     font-size: 0.8em;
     margin-left: 1ex;
