Common processor functionality is now supplied in ProcessorBase. Added stats to section indices.

--- a/OutputFormatting.HtmlFile/styles.css
+++ b/OutputFormatting.HtmlFile/styles.css
@@ -33,6 +33,10 @@ body {
 .item {
     margin-left: 1ex;
 }
+.stats {
+    font-size: 0.8em;
+    margin-left: 1ex;
+}
 .link-to-top {
     font-size: 0.8em;
     margin-left: 1ex;
